# embedded-systems-wp

./: .gitignore  CMakeLists.txt  template.c
wp-0/: exercise1.c  exercise2.c  exercise3.c
wp-1/: Lucas3.c  exerc_1_1.c  exerc_1_2.c  exerc_1_3.c  exerc_1_4.c  exerc_1_4_bin_to_hec.c  exerc_1_4_dec_to_bin.c  exerc_1_5.c  exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise4_bin_to_hec.c  exercise4_dec_to_bin.c  exercise5.c
wp-2/: converter.h  dec_to_bin.h  exerc_2_1.c  exerc_2_2.c  exerc_2_3.c  exerc_2_4.c  exerc_2_4_code.c  exerc_2_4_decode.c  test.c
wp-3/: exerc_3_1.ino  exerc_3_2.ino  exerc_3_3.ino  exerc_3_3_2.ino  exerc_3_4.ino
wp-3/sketch_feb15a/: sketch_feb15a.ino
wp-4/: exerc_4_1.cpp  exerc_4_2.ino  exerc_4_3.ino
wp-5/: exerc_5_1.ino  exerc_5_2_2.ino
wp-5/exerc_5_2/: exerc_5_2.ino
wp-6/: exerc_5_1_1.ino  exerc_6_1.ino  exerc_6_1_3.ino  exerc_6_1_Maryam_Version.ino  exerc_6_2_Maryam_Version.ino  exerc_6_3.ino  exerc_6_3_Maryam_Version.ino  test.ino
