cmake_minimum_required(VERSION 3.21)
project(github_edition C)

set(CMAKE_C_STANDARD 11)

add_executable(WP0_1
        wp-0/exercise1.c)
add_executable(WP0_2
        wp-0/exercise2.c)
add_executable(WP0_3
        wp-0/exercise3.c)

add_executable(WP1_1
        wp-1/exerc_1_1.c)
add_executable(WP1_2
        wp-1/exerc_1_2.c)
add_executable(WP1_3
        wp-1/exerc_1_3.c)
add_executable(WP1_4_a
        wp-1/exerc_1_4_dec_to_bin.c)
add_executable(WP1_4_b
        wp-1/exerc_1_4_bin_to_hec.c)
add_executable(WP1_5
        wp-1/exerc_1_5.c)

add_executable(WP2_1
        wp-2/exerc_2_1.c)
add_executable(WP2_2
        wp-2/exerc_2_2.c)
add_executable(WP2_3
        wp-2/exerc_2_3.c)
add_executable(WP2_4_code
        wp-2/exerc_2_4_code.c)
add_executable(WP2_4_decode
        wp-2/exerc_2_4_decode.c)
